cabal-version:       3.0

name:                ArithmeticExpr
version:             0.1.0.0
synopsis:            Evaluation of simple arithmetic expressions
-- description:
-- bug-reports:
license:             MIT License
-- license-file:        LICENSE
author:              Stéphane Micheloud
maintainer:          stephane.micheloud@gmail.com
-- copyright:
-- category:

build-type:          Simple
-- extra-source-files:  CHANGELOG.md
tested-with:         GHC == { 8.8.2 }

executable ArithmeticExpr
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  -- hs-source-dirs:
  main-is:             app/Main.hs
  -- other-modules:
  -- other-extensions:
