cabal-version:       2.4
-- Cabal version 3.0 is not supported by stack 2.1.3

name:                Colors
version:             0.1.0.0
synopsis:            Simple I/O operations (user interaction)
-- description:
-- bug-reports:
license:             MIT
-- license-file:        LICENSE
author:              Stéphane Micheloud
maintainer:          stephane.micheloud@gmail.com
-- copyright:
-- category:

build-type:          Simple
-- extra-source-files:  CHANGELOG.md
tested-with:         GHC >= 8.8.2

executable Colors
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  -- hs-source-dirs:
  main-is:             app/Main.hs
  -- other-modules:
  -- other-extensions:
