cabal-version:       3.0

name:                Colors
version:             0.1.0.0
synopsis:            Simple I/O operations (user interaction)
-- description:
-- bug-reports:
license:             MIT
-- license-file:        LICENSE
author:              Stéphane Micheloud
maintainer:          stephane.micheloud@gmail.com
-- copyright:
category:            example

build-type:          Simple
-- extra-source-files:  CHANGELOG.md
tested-with:         GHC >= 8.8.2

executable Colors
  build-depends:     base >= 4.13 && < 5
  default-language:  Haskell2010
  ghc-options:       -Wall -Wmissing-import-lists -Wincomplete-uni-patterns -Werror
  main-is:           Main.hs
  hs-source-dirs:    app
  -- other-modules:
  -- other-extensions:

test-suite test_Colors
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test
  build-depends:     base >= 4.13,
                     test-framework,
                     test-framework-hunit,
                     HUnit
