cabal-version:       3.0
name:                Factorial
version:             0.1.0.0
synopsis:            Different implementations of n!.
-- description:
-- bug-reports:
license:             MIT License
-- license-file:
author:              Stéphane Micheloud
maintainer:          stephane.micheloud@gmail.com
-- copyright:
-- category:

tested-with:         GHC == { 8.8.2 }
build-type:          Simple
extra-source-files:  

executable Factorial
  main-is:             app/Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
  ghc-options:         -Wall -Werror
  -- hs-source-dirs:
  default-language:    Haskell2010
