cabal-version:       3.0

name:                HelloWorldWeb
version:             0.1.0.0
synopsis:            Simple Hello web application
-- description:
-- bug-reports:
license:             MIT License
-- license-file:        LICENSE
author:              Stéphane Micheloud
maintainer:          stephane.micheloud@gmail.com
-- copyright:
category:            Web

build-type:          Simple
-- extra-source-files:  CHANGELOG.md
tested-with:         GHC == { 8.8.2 }

executable HelloWorldWeb
  build-depends:       base >=4.13 && <4.14,
                       scotty >=0.11.5,
                       text >=1.2.4.0
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  -- hs-source-dirs:
  main-is:             app/Main.hs
  -- other-modules:
  -- other-extensions:
