cabal-version:       3.0

name:                Quadratic
version:             0.1.0.0
synopsis:            Haskell Cookbook (Packt)
-- description:
-- bug-reports:
-- license:             MIT
-- license-file:        LICENSE
author:              Yogesh Sajanikar
-- maintainer:
-- copyright:
-- category:

build-type:          Simple
-- extra-source-files:  CHANGELOG.md
tested-with:         GHC >= 8.8.2

library
  hs-source-dirs:      app
  exposed-modules:     Quadratic
  build-depends:       base >= 4.13 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable Quadratic
  build-depends:       base >= 4.13 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall -Wmissing-import-lists -Wincomplete-uni-patterns -Wno-type-defaults
  -- hs-source-dirs:
  main-is:             app/Main.hs
  -- other-modules:
  -- other-extensions:
